--- a/.github/workflows/my_first_workflow.yml
+++ b/.github/workflows/my_first_workflow.yml
@@ -5,13 +5,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, ubuntu-20.4]
-      steps:
-        - name: echo a string
-          run: echo "Hello World"
-        - name: miltiline script
-          run: |
-            python3 -V
-            touch my_file_with_workflow.py
-            ls -l
+        os: [ubuntu-latest, ubuntu-20.04]
+    steps:
+      - name: echo a string
+        run: echo "Hello world"
+      - name: multiline script
+        run: |
+          python3 -V
+          touch my_file_with_workflow.py
+          ls -l
 
