--- a/.github/workflows/Multi_shells.yaml
+++ b/.github/workflows/Multi_shells.yaml
@@ -6,7 +6,7 @@ on:
     pull_request:
       types: [closed, assigned, opened, reopened]
   jobs:
-    run-shell-commands:
+    run-shell-command:
       runs-on: ubuntu-latest
       steps:
         - name: python commands
@@ -15,7 +15,7 @@ on:
             print(platform.processor())
           shell: python
     run-windows-command:
-      runs-on: winodws-latest
+      runs-on: windows-latest
       needs: ["run-shell-command"]
       steps:
         - name: current directory with powershell
