--- a/.github/workflows/control_tests.yaml
+++ b/.github/workflows/control_tests.yaml
@@ -9,7 +9,7 @@ jobs:
         uses: action/checkout@v3
 
       - name: Set up Python
-        uses: actin/setup-python@master
+        uses: action/setup-python@master
         with:
           python-version: "3.x"
 
