--- a/.github/workflows/control_tests.yaml
+++ b/.github/workflows/control_tests.yaml
@@ -6,10 +6,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout on master
-        uses: action/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: action/setup-python@master
+        uses: actions/setup-python@master
         with:
           python-version: "3.x"
 
