--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -8,6 +8,17 @@ jobs:
     permissions:
       contents: write
     steps:
+      - name: Checkout on master
+        uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@master
+        with:
+          python-version: "3.x"
+
+      - name: Install pytest and flake8
+        run: |
+          pip install pytest
+
       - name: Push a file to our repository
         run: |
           pwd
