--- a/.github/workflows/meteo.yaml
+++ b/.github/workflows/meteo.yaml
@@ -14,4 +14,4 @@ jobs:
       - name: "Récupération de la météo"
         run: curl wttr.in/$LOCATION
         env:
-          LOCATION: Etrez
+          LOCATION: Lyon
